stop content from shifting

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -2,6 +2,10 @@
   color-scheme: dark;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 @media (min-width: 1024px) {
   .prose :where(.prose > *):not(:where([class~="not-prose"] *)) {
     max-width: 40rem;
